[package]
name = "wasm"
version = "0.0.1"
authors = ["Alexander Kehr <alex@alexanderkehr.de>"]
edition = "2018"

[lib]
path = "rs/src/lib.rs"
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2"
rand = { version = "0.7.2", features = ["wasm-bindgen"] }
console_error_panic_hook = { version = "0.1.1", optional = true }

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
]

[profile.release]
opt-level = "s"
